--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 24: Hope - Blood Orange
+          Week 25: Kitty Kat - Beyonce
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 7.9/10</h2>
+            <h2 id="rating">Overall Rating: 8.7/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/2QLNDKL7hZyh2OZ8UL9WrV?si=905d72e4c2f64d13"
+                    href="https://open.spotify.com/track/5UhR5ud9gS6n0PgzsjZmQd?si=ba59c85dc8a74cdd"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=kxt98d7XlJc"
+                    href="https://www.youtube.com/watch?v=yahNg-mJ4p8"
                     target="_blank"
                     ><center>
                       <img
@@ -113,25 +113,23 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The sporadic piano that consists through this track opens up at
-              the end in its own solo as Blood Orange, Diddy, and Tei Shi
-              flip-flop their own vocals. It brings a calm and enjoyable finish
-              to a rather upbeat song.
+              I just love the synth-y production of this song. I wouldn't dare
+              say that this is my favorite Beyonce era in terms of production
+              but this song and the album it's derived from definitely rivals
+              the other greats of her work. "Kitty Kat" has the classic Beyonce
+              sound.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Blood Orange, real name of Devonté Hynes, released a project
-              called "Negro Swan" in 2018. This track is not a standout in any
-              way, there are multitudes of quality songs on this release
-              spanning many different genres and sounds. I'm into this
-              production currently, I really enjoy the alternative R&B sound of
-              it specifically. The features all meld together perfectly and
-              create a relaxing yet attention-grabbing sound. Give this one a
-              listen and make the best of your week!
+              Beyonce's second studio album, "B'Day", further establishes her
+              already extremeley successful presence in the music industry. This
+              track specifically leans into her pop persona and, in my opinion,
+              does it very well. Listen to this on a road trip, with friends, or
+              alone to really appreciate the complexities. Make it a good week!
             </p>
           </div>
         </div>
-        <div id="celebSotW">
+        <div id="celebSotW" hidden>
           <div class="divider"><center></center></div>
           <h2 style="font-size: 30px" id="title">Album Review</h2>
           <h2>SOS - SZA</h2>
@@ -158,21 +156,21 @@
             her next project. Thank you.
           </p>
         </div>
-        <div id="celebSotW" hidden>
+        <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Dallin Corless: Everything is Embarrassing - Sky Ferreira
+            Waylon Bell: Lil Thing - Knox Fortune
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating: 9.4/10</h2>
+              <h2 id="rating">Overall Rating: 9.7/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/70v5mCvyPRquTyU7qTIU81?si=844341a000844f38"
+                    href="https://open.spotify.com/track/3q6ygCZID0OKj6MUxInB48?si=ad176503b42f4dd4"
                     target="_blank"
                     ><center>
                       <img
@@ -186,7 +184,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=rEamE0MYPkg"
+                    href="https://www.youtube.com/watch?v=TGr7mWQ0vCQ"
                     target="_blank"
                     ><center>
                       <img
@@ -203,27 +201,25 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            This song has been a favorite of mine for a while and I would give
-            it a 10/10 honestly, except the visuals and vocals are nothing
-            exceptional (although the video reportedly had no budget). Strictly
-            the song however, it’s perfection. Production-wise, it somehow
-            sounds both slightly industrial and late 2010s-indie/bedroom pop at
-            the same time; it’s almost reminiscent of SZA’s “Hit Different” but
-            with a lesser RnB feel. Lyrically this song achieves what I consider
-            to be a perfect balance, feeling both specific and meaningful to the
-            artist while also being open to individual interpretation. The
-            events Sky Ferreira herself experienced to write this song are
-            clearly being chronicled here, yet the lyrics are relatable enough
-            that there is more meaning to be gleaned from them upon further
-            listens as we project our own experiences onto them. The New York
-            Times described it as “counterintuitive and brilliant,” I couldn’t
-            agree more. It succeeds at everything a song could hope to achieve
-            all at once. The bridge after the second verse in particular is some
-            of the most beautiful lyricism and performance I’ve ever heard. I
-            would say this song is pretty experimental, especially considering
-            its initial release in 2012. That being the case, I encourage giving
-            it a few listens before a final judgment to let its intricacies
-            really shine!
+            I discovered this song from the Cal Berkeley student radio about 2
+            years ago just in time for summer and it has not left my playlist
+            ever since. While a 9.7 rating is incredibly high this song truly
+            deserves it, it encapsulates the vibe of summer and especially
+            summer love in a way that effortlessly floats up to your ears. The
+            song was gorgeously produced with this funky beat that somehow
+            sounds both retro and futuristic with the lyrics to tie it all
+            together wonderfully. The lyrics definitely play into the summer
+            vibe as the chorus reads “it’s the summer, and I’m at it again, she
+            my lil thing, gets me outta my jam”. As you listen to this song you
+            yearn for a day at the beach and if your lucky enough to be at the
+            beach, well, you’re in for a treat. While I will be the first to
+            admit I am far from knowing all of the intricacies of music and
+            especially what correlates into good music so I will refrain from
+            going in depth about the musical elements of this song but, that
+            does not mean I do not know a good song when I hear one. This song
+            has been one of my favorites for a long time and everyone I play it
+            for always loves it too, so I ask you next time you’re on aux expand
+            someone’s playlist with this one!
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -348,6 +344,11 @@
               <td>23</td>
               <td>Tombola 94 - Dina Ögon</td>
               <td>8.2/10</td>
+            </tr>
+            <tr>
+              <td>24</td>
+              <td>Hope - Blood Orange</td>
+              <td>7.9/10</td>
             </tr>
           </table>
         </div>
