--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 25: Kitty Kat - Beyonce
+          Week 26: Cologne - Beabadoobee
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,7 +32,7 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 8.7/10</h2>
+            <h2 id="rating">Overall Rating: 9.4/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=yahNg-mJ4p8"
+                    href="https://www.youtube.com/watch?v=aalRn01lMmg"
                     target="_blank"
                     ><center>
                       <img
@@ -113,19 +113,23 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              I just love the synth-y production of this song. I wouldn't dare
-              say that this is my favorite Beyonce era in terms of production
-              but this song and the album it's derived from definitely rivals
-              the other greats of her work. "Kitty Kat" has the classic Beyonce
-              sound.
+              The buildups to the choruses distribute the pacing of this song
+              and keep it from falling flat. Beabadoobee's voice is at its PEAK
+              here and the lyrics are so amusing. There is so much to love about
+              this song.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Beyonce's second studio album, "B'Day", further establishes her
-              already extremeley successful presence in the music industry. This
-              track specifically leans into her pop persona and, in my opinion,
-              does it very well. Listen to this on a road trip, with friends, or
-              alone to really appreciate the complexities. Make it a good week!
+              A year after the heat wave of success that was her hit single
+              "death bed" in early 2020 and her closely followed album "Fake It
+              Flowers", Beabadoobee subtly released an EP titled "Our Extended
+              Play". Despite being a quaint 12 minutes long, the 4 tracks are
+              cohesive and build on each other; they transport you. It is
+              extensively reminiscent of early 2000's pop-punk (even the album
+              cover). "Cologne" has this conceited overconfidence that
+              encapsulates the pop-punk style. I love this kind of
+              world-building in a song, it greatly heightens the experience. I
+              hope you enjoy this one, and please make it a great week!
             </p>
           </div>
         </div>
@@ -349,6 +353,11 @@
               <td>24</td>
               <td>Hope - Blood Orange</td>
               <td>7.9/10</td>
+            </tr>
+            <tr>
+              <td>25</td>
+              <td>Kitty Kat - Beyonce</td>
+              <td>8.7/10</td>
             </tr>
           </table>
         </div>
