portfolio work in progress

--- a/pics.html
+++ b/pics.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Jaymes Garbe: Pics</title>
+    <title>Jaymes Garbe: Photography</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -10,38 +10,38 @@
       <div id="sidenav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="pics.html">Pics of Me</a></li>
+          <li><a href="pics.html">Photography</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="songs.html">Song of the Week</a></li>
         </ul>
       </div>
       <div id="main">
-        <h1>Pics of Me</h1>
+        <h1>Film Photography Portfolio</h1>
         <img
-          src="images/llama.jpg"
+          src="images/portfolio/kona_flag.jpg"
           alt="Me and a Llama"
-          height="350"
+          height="400"
           class="borderedImg"
         />
         <div style="float: right">
           <img
-            src="images/bday_sf.JPG"
+            src="images/portfolio/fisher.jpg"
             alt="Me on the Pier in San Francisco"
-            height="350"
+            height="400"
             class="borderedImg"
           />
         </div>
         <img
-          src="images/santa_cruz.HEIC"
+          src="images/portfolio/cows.jpg"
           alt="Me holding a Pirouette cookie in my mouth in Santa Cruz"
-          height="350"
+          height="400"
           class="borderedImg"
         />
         <div style="float: right">
           <img
-            src="images/sb_friends.jpg"
+            src="images/portfolio/cal_football.jpg"
             alt="Me, my girfriend to my left, and her roommate in front in Santa Barbara"
-            height="350"
+            height="400"
             class="borderedImg"
           />
         </div>
