--- a/songs.html
+++ b/songs.html
@@ -10,7 +10,7 @@
       <div id="sidenav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="pics.html">Pics of Me</a></li>
+          <li><a href="pics.html">Photography</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="songs.html">Song of the Week</a></li>
         </ul>
