--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 26: Cologne - Beabadoobee
+          Week 27: Now Or Never - Kendrick Lamar
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 9.4/10</h2>
+            <h2 id="rating">Overall Rating: 8.5/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/5UhR5ud9gS6n0PgzsjZmQd?si=ba59c85dc8a74cdd"
+                    href="https://open.spotify.com/track/4KjnaUNYPwGnJjoeTFlt91?si=855a070759f24b45"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=aalRn01lMmg"
+                    href="https://www.youtube.com/watch?v=GHHzj6R_EnM"
                     target="_blank"
                     ><center>
                       <img
@@ -113,23 +113,23 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The buildups to the choruses distribute the pacing of this song
-              and keep it from falling flat. Beabadoobee's voice is at its PEAK
-              here and the lyrics are so amusing. There is so much to love about
-              this song.
+              Mary J. Blige delivers a lovely chorus over this R&B style. I love
+              the background track and Mary's vocals fit it so so well. It's
+              completely new and different from what Kendrick Lamar is known to
+              do. A very pleasant result is achieved. Keep it up Mary and
+              Kendrick!
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              A year after the heat wave of success that was her hit single
-              "death bed" in early 2020 and her closely followed album "Fake It
-              Flowers", Beabadoobee subtly released an EP titled "Our Extended
-              Play". Despite being a quaint 12 minutes long, the 4 tracks are
-              cohesive and build on each other; they transport you. It is
-              extensively reminiscent of early 2000's pop-punk (even the album
-              cover). "Cologne" has this conceited overconfidence that
-              encapsulates the pop-punk style. I love this kind of
-              world-building in a song, it greatly heightens the experience. I
-              hope you enjoy this one, and please make it a great week!
+              "Good Kid, m.A.A.d city", Kendrick Lamar's second studio album,
+              proved to be a very influential album for his career. It has a
+              very regimented sound and tells a continuous story throughout the
+              tracklist. This particular track is taken from the Deluxe album,
+              it's one of the bonus tracks that are apart from the main sound
+              and storyline. While I do cherish the main tracks, some of these
+              bonus tracks manage to be of my favorites. I think this one in
+              particular is a refreshing diversion from the original sound.
+              Definitely give it a listen!! Make it a great great week.
             </p>
           </div>
         </div>
@@ -358,6 +358,11 @@
               <td>25</td>
               <td>Kitty Kat - Beyonce</td>
               <td>8.7/10</td>
+            </tr>
+            <tr>
+              <td>26</td>
+              <td>Cologne - Beabadoobee</td>
+              <td>9.4/10</td>
             </tr>
           </table>
         </div>
