--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 27: Now Or Never - Kendrick Lamar
+          Week 28: blazed - Ariana Grande
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 8.5/10</h2>
+            <h2 id="rating">Overall Rating: 8.4/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/4KjnaUNYPwGnJjoeTFlt91?si=855a070759f24b45"
+                    href="https://open.spotify.com/track/4mLkiFppf8Xvem6BSY34qw?si=4330094287ec47ad"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=GHHzj6R_EnM"
+                    href="https://www.youtube.com/watch?v=h5Ne3YcZCVI"
                     target="_blank"
                     ><center>
                       <img
@@ -113,23 +113,22 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Mary J. Blige delivers a lovely chorus over this R&B style. I love
-              the background track and Mary's vocals fit it so so well. It's
-              completely new and different from what Kendrick Lamar is known to
-              do. A very pleasant result is achieved. Keep it up Mary and
-              Kendrick!
+              Pharrell is so cool and I love him dearly. He does his little
+              thing on this song and, as always, it amazes. I think the
+              similarity of Ariana and his lofty, higher-pitched vocals allow
+              them to flow rather seamlessly on this song. Pharrell's little
+              bridge near the end is so good too!
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              "Good Kid, m.A.A.d city", Kendrick Lamar's second studio album,
-              proved to be a very influential album for his career. It has a
-              very regimented sound and tells a continuous story throughout the
-              tracklist. This particular track is taken from the Deluxe album,
-              it's one of the bonus tracks that are apart from the main sound
-              and storyline. While I do cherish the main tracks, some of these
-              bonus tracks manage to be of my favorites. I think this one in
-              particular is a refreshing diversion from the original sound.
-              Definitely give it a listen!! Make it a great great week.
+              I've been on such a "Sweetener" kick this week, it is really such
+              a good album and Ariana Grande just hasn't done it for me since.
+              This is by no means my favorite song off of the album, but it's
+              been in my head the past couple of days. It's such a short and
+              addictive song, the way the two vocalists bounce back and forth
+              pulls your attention in and it doesn't fall flat for even a
+              second. Give this one a listen if youi need a little pop
+              pick-me-up. Make it a great week everyone!!
             </p>
           </div>
         </div>
@@ -163,18 +162,18 @@
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Waylon Bell: Lil Thing - Knox Fortune
+            Ayla: the ride- - Lil Yachty
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating: 9.7/10</h2>
+              <h2 id="rating">Overall Rating: 9.0/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/3q6ygCZID0OKj6MUxInB48?si=ad176503b42f4dd4"
+                    href="https://open.spotify.com/track/04HeNxRRVjcwctfp2K2kMu?si=32eafcdaa85847e3"
                     target="_blank"
                     ><center>
                       <img
@@ -188,7 +187,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=TGr7mWQ0vCQ"
+                    href="https://www.youtube.com/watch?v=qSemB-pfR2c"
                     target="_blank"
                     ><center>
                       <img
@@ -205,25 +204,13 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            I discovered this song from the Cal Berkeley student radio about 2
-            years ago just in time for summer and it has not left my playlist
-            ever since. While a 9.7 rating is incredibly high this song truly
-            deserves it, it encapsulates the vibe of summer and especially
-            summer love in a way that effortlessly floats up to your ears. The
-            song was gorgeously produced with this funky beat that somehow
-            sounds both retro and futuristic with the lyrics to tie it all
-            together wonderfully. The lyrics definitely play into the summer
-            vibe as the chorus reads “it’s the summer, and I’m at it again, she
-            my lil thing, gets me outta my jam”. As you listen to this song you
-            yearn for a day at the beach and if your lucky enough to be at the
-            beach, well, you’re in for a treat. While I will be the first to
-            admit I am far from knowing all of the intricacies of music and
-            especially what correlates into good music so I will refrain from
-            going in depth about the musical elements of this song but, that
-            does not mean I do not know a good song when I hear one. This song
-            has been one of my favorites for a long time and everyone I play it
-            for always loves it too, so I ask you next time you’re on aux expand
-            someone’s playlist with this one!
+            This new Yachty project is so impressive! I love the psychedelic
+            rock/pop influences and I think his vocals go really well with this
+            vibe. Teezo’s verses and amazing background vocals layer super
+            nicely with the beat, and the production on this entire album is one
+            of the best i’ve heard on an album i’ve heard in a while. I love
+            seeing artists reach into new genres, and I think you should
+            definitely give this entire project a listen!
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -362,6 +349,11 @@
             <tr>
               <td>26</td>
               <td>Cologne - Beabadoobee</td>
+              <td>9.4/10</td>
+            </tr>
+            <tr>
+              <td>27</td>
+              <td>Now Or Never - Kendrick Lamar</td>
               <td>9.4/10</td>
             </tr>
           </table>
