--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 28: blazed - Ariana Grande
+          Week 29: Picture in my mind - PinkPantheress
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 8.4/10</h2>
+            <h2 id="rating">Overall Rating: 7.6/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/4mLkiFppf8Xvem6BSY34qw?si=4330094287ec47ad"
+                    href="https://open.spotify.com/track/0z3YYobsavHguLTgqg5GC1?si=afef8d15d0494adf"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=h5Ne3YcZCVI"
+                    href="https://www.youtube.com/watch?v=SIHS1lLzqOo"
                     target="_blank"
                     ><center>
                       <img
@@ -113,22 +113,19 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Pharrell is so cool and I love him dearly. He does his little
-              thing on this song and, as always, it amazes. I think the
-              similarity of Ariana and his lofty, higher-pitched vocals allow
-              them to flow rather seamlessly on this song. Pharrell's little
-              bridge near the end is so good too!
+              The build up to the drop of this song just does it for me, it's as
+              simple as that. The chorus is so fun, although I could do without
+              whoever Sam Gellaity is, it's hard to compare with
+              PinkPantheress's stand-out vocals.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              I've been on such a "Sweetener" kick this week, it is really such
-              a good album and Ariana Grande just hasn't done it for me since.
-              This is by no means my favorite song off of the album, but it's
-              been in my head the past couple of days. It's such a short and
-              addictive song, the way the two vocalists bounce back and forth
-              pulls your attention in and it doesn't fall flat for even a
-              second. Give this one a listen if youi need a little pop
-              pick-me-up. Make it a great week everyone!!
+              Maybe her longest song in her whole discography, this track by
+              PinkPantheress spans nearly 3 whole mintues and allwo for two
+              choruses! Luckily the chorus is of the most enjoyable part and
+              besides the more EDM influences of this song, it is the same
+              melody and lyricism of any good PinkPantheress song. Give this one
+              a listen and make it a great week!
             </p>
           </div>
         </div>
@@ -355,6 +352,11 @@
               <td>27</td>
               <td>Now Or Never - Kendrick Lamar</td>
               <td>9.4/10</td>
+            </tr>
+            <tr>
+              <td>28</td>
+              <td>blazed - Ariana Grande</td>
+              <td>8.4/10</td>
             </tr>
           </table>
         </div>
