--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 29: Picture in my mind - PinkPantheress
+          Week 30: 3 Boys - Omar Apollo
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 7.6/10</h2>
+            <h2 id="rating">Overall Rating: 8.8/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/0z3YYobsavHguLTgqg5GC1?si=afef8d15d0494adf"
+                    href="https://open.spotify.com/track/31Wlc9ZnraX3JxrvMg9e8H?si=7cc677baeb4a4dce"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=SIHS1lLzqOo"
+                    href="https://www.youtube.com/watch?v=ZzPPtoxxzME"
                     target="_blank"
                     ><center>
                       <img
@@ -113,19 +113,21 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The build up to the drop of this song just does it for me, it's as
-              simple as that. The chorus is so fun, although I could do without
-              whoever Sam Gellaity is, it's hard to compare with
-              PinkPantheress's stand-out vocals.
+              The lyricism right before and after the bridge in the very middle
+              of the song is so pretty, and the cadence of this section is just
+              as pleasing. The bridge itself is also worth mentioning, it
+              divides the song wonderfully.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Maybe her longest song in her whole discography, this track by
-              PinkPantheress spans nearly 3 whole mintues and allwo for two
-              choruses! Luckily the chorus is of the most enjoyable part and
-              besides the more EDM influences of this song, it is the same
-              melody and lyricism of any good PinkPantheress song. Give this one
-              a listen and make it a great week!
+              Omar Apollo continues to impress me as a rapidly growing artist
+              (he was absolutely ROBBED of the Best New Artist award at the
+              Grammys). This new single, while fitting right in with the sound
+              he established in his recent project "Ivory", has a subtle and
+              sultry twang that is completely apart from his recent music. It
+              makes me really excited as to where this could take him. Hoping
+              for a new album soon :) Give this one a listen and make it a great
+              week.
             </p>
           </div>
         </div>
@@ -357,6 +359,11 @@
               <td>28</td>
               <td>blazed - Ariana Grande</td>
               <td>8.4/10</td>
+            </tr>
+            <tr>
+              <td>29</td>
+              <td>Picture in my mind - PinkPanthress</td>
+              <td>7.6/10</td>
             </tr>
           </table>
         </div>
