--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 30: 3 Boys - Omar Apollo
+          Week 31: Sinking - Clairo
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 8.8/10</h2>
+            <h2 id="rating">Overall Rating: 8.6/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/31Wlc9ZnraX3JxrvMg9e8H?si=7cc677baeb4a4dce"
+                    href="https://open.spotify.com/track/7BQWJDX9GGqq3D6ezggaqB?si=b5761c4af7f74773"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=ZzPPtoxxzME"
+                    href="https://www.youtube.com/watch?v=G64_xr3nf44"
                     target="_blank"
                     ><center>
                       <img
@@ -113,21 +113,19 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The lyricism right before and after the bridge in the very middle
-              of the song is so pretty, and the cadence of this section is just
-              as pleasing. The bridge itself is also worth mentioning, it
-              divides the song wonderfully.
+              I think the lyricism in this song is so beautiful and the soothing
+              humming throughout the background of this song makes it all the
+              more enjoyable to me.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Omar Apollo continues to impress me as a rapidly growing artist
-              (he was absolutely ROBBED of the Best New Artist award at the
-              Grammys). This new single, while fitting right in with the sound
-              he established in his recent project "Ivory", has a subtle and
-              sultry twang that is completely apart from his recent music. It
-              makes me really excited as to where this could take him. Hoping
-              for a new album soon :) Give this one a listen and make it a great
-              week.
+              Although its not the underground discovery I would like to hold as
+              my golden standard for indie pop albums, Clairo's massively
+              popular "Immunity" is my standout favorite of the genre. This
+              track has always been a favorite of mine, but my love has
+              resurfaced stronger than ever for this floating yet tragic
+              arrangement. Give it one, two, or three listens, and I emplore you
+              to not stop there. Make it a great week!
             </p>
           </div>
         </div>
@@ -160,19 +158,17 @@
         </div>
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
-          <h2 style="font-size: 30px" id="title">
-            Ayla: the ride- - Lil Yachty
-          </h2>
+          <h2 style="font-size: 30px" id="title">Kinzey Eastin</h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating: 9.0/10</h2>
+              <h2 id="rating">Overall Rating: 9.8/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/04HeNxRRVjcwctfp2K2kMu?si=32eafcdaa85847e3"
+                    href="https://open.spotify.com/track/53TIOhzNpRpl8xKdscSQSv?si=f57c81eaf58a48c1"
                     target="_blank"
                     ><center>
                       <img
@@ -186,7 +182,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=qSemB-pfR2c"
+                    href="https://www.youtube.com/watch?v=TfEkDqP34xo"
                     target="_blank"
                     ><center>
                       <img
@@ -203,13 +199,14 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            This new Yachty project is so impressive! I love the psychedelic
-            rock/pop influences and I think his vocals go really well with this
-            vibe. Teezo’s verses and amazing background vocals layer super
-            nicely with the beat, and the production on this entire album is one
-            of the best i’ve heard on an album i’ve heard in a while. I love
-            seeing artists reach into new genres, and I think you should
-            definitely give this entire project a listen!
+            This semi-autobiographical song tells a story of the narrator’s
+            friend dying from bone cancer, and the way that it complicates his
+            relationship with God. Sufjan Stevens creates a very simple
+            production, with most of the song containing just an acoustic guitar
+            and letting the lyrics take you through the story, ending with a
+            beautiful arrangement of horns and vocals. It is one of my favorite
+            songs of all time, with an incredible mix of musicianship and
+            songwriting.
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -364,6 +361,11 @@
               <td>29</td>
               <td>Picture in my mind - PinkPanthress</td>
               <td>7.6/10</td>
+            </tr>
+            <tr>
+              <td>30</td>
+              <td>3 Boys - Omar Apollo</td>
+              <td>8.8/10</td>
             </tr>
           </table>
         </div>
