--- a/songs.html
+++ b/songs.html
@@ -158,7 +158,9 @@
         </div>
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
-          <h2 style="font-size: 30px" id="title">Kinzey Eastin</h2>
+          <h2 style="font-size: 30px" id="title">
+            Kinzey Eastin: Casimir Pulaski Day - Sufjan Stevens
+          </h2>
           <div class="row">
             <div class="column">
               <h2 id="rating">Overall Rating: 9.8/10</h2>
